@@ -26,6 +26,7 @@ import hudson.plugins.git.extensions.impl.BuildChooserSetting;
 import hudson.plugins.git.extensions.impl.BuildSingleRevisionOnly;
 import hudson.plugins.git.extensions.impl.ChangelogToBranch;
 import hudson.plugins.git.extensions.impl.CloneOption;
+import hudson.plugins.git.extensions.impl.FirstBuildChangelog;
 import hudson.plugins.git.extensions.impl.PathRestriction;
 import hudson.plugins.git.extensions.impl.LocalBranch;
 import hudson.plugins.git.extensions.impl.RelativeTargetDirectory;
@@ -67,21 +68,22 @@ import org.jenkinsci.plugins.scriptsecurity.sandbox.whitelists.Whitelisted;
 import org.jenkinsci.Symbol;
 import org.kohsuke.stapler.DataBoundConstructor;
 import org.kohsuke.stapler.DataBoundSetter;
-import org.kohsuke.stapler.StaplerRequest;
+import org.kohsuke.stapler.StaplerRequest2;
 import org.kohsuke.stapler.export.Exported;
 
-import javax.servlet.ServletException;
+import jakarta.servlet.ServletException;
 
 import java.io.File;
 import java.io.IOException;
 import java.io.OutputStreamWriter;
 import java.io.PrintStream;
+import java.io.Serial;
 import java.io.Serializable;
 import java.io.Writer;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.InvalidPathException;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.text.MessageFormat;
 import java.util.AbstractList;
 import java.util.ArrayList;
@@ -183,7 +185,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
      * @param repositoryUrl git repository URL
      *      Repository URL to clone from.
      */
-    public GitSCM(String repositoryUrl) {
+    public GitSCM(String repositoryUrl) throws GitException {
         this(
                 createRepoList(repositoryUrl, null),
                 Collections.singletonList(new BranchSpec("")),
@@ -198,7 +200,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
             Collection<SubmoduleConfig> submoduleCfg,
             @CheckForNull GitRepositoryBrowser browser,
             @CheckForNull String gitTool,
-            List<GitSCMExtension> extensions) {
+            List<GitSCMExtension> extensions) throws GitException {
         this(userRemoteConfigs, branches, browser, gitTool, extensions);
     }
 
@@ -208,7 +210,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
             List<BranchSpec> branches,
             @CheckForNull GitRepositoryBrowser browser,
             @CheckForNull String gitTool,
-            List<GitSCMExtension> extensions) {
+            List<GitSCMExtension> extensions) throws GitException {
 
         // moved from createBranches
         if (branches == null || branches.isEmpty()) {
@@ -266,7 +268,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
     }
 
     @SuppressWarnings("deprecation") // `source` field is deprecated but required
-    public Object readResolve() throws IOException {
+    public Object readResolve() throws IOException, GitException {
         // Migrate data
 
         // Default unspecified to v0
@@ -350,7 +352,6 @@ public class GitSCM extends GitSCMBackwardCompatibility {
     }
 
     @Override
-    @Whitelisted
     public GitRepositoryBrowser getBrowser() {
         return browser;
     }
@@ -492,7 +493,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
     }
 
     @Deprecated
-    public List<RemoteConfig> getParamExpandedRepos(Run<?, ?> build) throws IOException, InterruptedException {
+    public List<RemoteConfig> getParamExpandedRepos(Run<?, ?> build) throws GitException, IOException, InterruptedException {
         return getParamExpandedRepos(build, new LogTaskListener(LOGGER, Level.INFO));
     }
 
@@ -506,7 +507,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
      * @throws InterruptedException when interrupted
      * @return can be empty but never null.
      */
-    public List<RemoteConfig> getParamExpandedRepos(Run<?, ?> build, TaskListener listener) throws IOException, InterruptedException {
+    public List<RemoteConfig> getParamExpandedRepos(Run<?, ?> build, TaskListener listener) throws GitException, IOException, InterruptedException {
         List<RemoteConfig> expandedRepos = new ArrayList<>();
 
         EnvVars env = build.getEnvironment(listener);
@@ -524,7 +525,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
      * @param remoteRepository Remote repository with parameters
      * @return remote repository with expanded parameters
      */
-    public RemoteConfig getParamExpandedRepo(EnvVars env, RemoteConfig remoteRepository) {
+    public RemoteConfig getParamExpandedRepo(EnvVars env, RemoteConfig remoteRepository) throws GitException {
         List<RefSpec> refSpecs = getRefSpecs(remoteRepository, env);
     	return newRemoteConfig(
                 getParameterString(remoteRepository.getName(), env),
@@ -619,7 +620,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
      * If the configuration is such that we are tracking just one branch of one repository
      * return that branch specifier (in the form of something like "origin/master" or a SHA1-hash
      *
-     * Otherwise return [@code null}.
+     * Otherwise return {@code null}.
      */
     @CheckForNull
     private String getSingleBranch(EnvVars env) {
@@ -694,7 +695,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
 
     public static final Pattern GIT_REF = Pattern.compile("^(refs/[^/]+)/(.+)");
 
-    private PollingResult compareRemoteRevisionWithImpl(Job<?, ?> project, Launcher launcher, FilePath workspace, final @NonNull TaskListener listener) throws IOException, InterruptedException {
+    private PollingResult compareRemoteRevisionWithImpl(Job<?, ?> project, Launcher launcher, FilePath workspace, final @NonNull TaskListener listener) throws GitException, IOException, InterruptedException {
         // Poll for changes. Are there any unbuilt revisions that Jenkins ought to build ?
 
         listener.getLogger().println("Using strategy: " + getBuildChooser().getDisplayName());
@@ -711,13 +712,13 @@ public class GitSCM extends GitSCMBackwardCompatibility {
             listener.getLogger().println("[poll] Last Built Revision: " + buildData.lastBuild.revision);
         }
 
-        final EnvVars pollEnv = project instanceof AbstractProject ? GitUtils.getPollEnvironment((AbstractProject) project, workspace, launcher, listener, false) : lastBuild.getEnvironment(listener);
+        final EnvVars pollEnv = project instanceof AbstractProject<?,?> ap ? GitUtils.getPollEnvironment(ap, workspace, launcher, listener, false) : lastBuild.getEnvironment(listener);
 
         final String singleBranch = getSingleBranch(pollEnv);
 
         if (!requiresWorkspaceForPolling(pollEnv)) {
 
-            final EnvVars environment = project instanceof AbstractProject ? GitUtils.getPollEnvironment((AbstractProject) project, workspace, launcher, listener, false) : new EnvVars();
+            final EnvVars environment = project instanceof AbstractProject<?,?> ap ? GitUtils.getPollEnvironment(ap, workspace, launcher, listener, false) : new EnvVars();
 
             GitClient git = createClient(listener, environment, lastBuild, Jenkins.get(), null);
 
@@ -785,7 +786,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
         }
 
         final Node node = GitUtils.workspaceToNode(workspace);
-        final EnvVars environment = project instanceof AbstractProject ? GitUtils.getPollEnvironment((AbstractProject) project, workspace, launcher, listener) : project.getEnvironment(node, listener);
+        final EnvVars environment = project instanceof AbstractProject<?,?> ap ? GitUtils.getPollEnvironment(ap, workspace, launcher, listener) : project.getEnvironment(node, listener);
 
         FilePath workingDirectory = workingDirectory(project,workspace,environment,listener);
 
@@ -837,7 +838,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
      * @throws InterruptedException when interrupted
      */
     @NonNull
-    public GitClient createClient(TaskListener listener, EnvVars environment, @NonNull Run<?,?> build, FilePath workspace) throws IOException, InterruptedException {
+    public GitClient createClient(TaskListener listener, EnvVars environment, @NonNull Run<?,?> build, FilePath workspace) throws GitException, IOException, InterruptedException {
         FilePath ws = workingDirectory(build.getParent(), workspace, environment, listener);
         /* ws will be null if the node which ran the build is offline */
         if (ws != null) {
@@ -860,7 +861,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
      * @throws InterruptedException when interrupted
      */
     @NonNull
-    public GitClient createClient(TaskListener listener, EnvVars environment, @NonNull Run<?,?> build, FilePath workspace, UnsupportedCommand postBuildUnsupportedCommand) throws IOException, InterruptedException {
+    public GitClient createClient(TaskListener listener, EnvVars environment, @NonNull Run<?,?> build, FilePath workspace, UnsupportedCommand postBuildUnsupportedCommand) throws GitException, IOException, InterruptedException {
         FilePath ws = workingDirectory(build.getParent(), workspace, environment, listener);
         /* ws will be null if the node which ran the build is offline */
         if (ws != null) {
@@ -871,12 +872,12 @@ public class GitSCM extends GitSCMBackwardCompatibility {
     }
 
     @NonNull
-    private GitClient createClient(TaskListener listener, EnvVars environment, @NonNull Run<?, ?> build, Node n, FilePath ws) throws IOException, InterruptedException {
+    private GitClient createClient(TaskListener listener, EnvVars environment, @NonNull Run<?, ?> build, Node n, FilePath ws) throws GitException, IOException, InterruptedException {
         return createClient(listener, environment, build, n, ws, null);
     }
 
     @NonNull
-    private GitClient createClient(TaskListener listener, EnvVars environment, @NonNull Run<?, ?> build, Node n, FilePath ws, UnsupportedCommand postBuildUnsupportedCommand) throws IOException, InterruptedException {
+    private GitClient createClient(TaskListener listener, EnvVars environment, @NonNull Run<?, ?> build, Node n, FilePath ws, UnsupportedCommand postBuildUnsupportedCommand) throws GitException, IOException, InterruptedException {
 
         if (postBuildUnsupportedCommand == null) {
             /* UnsupportedCommand supports JGit by default */
@@ -913,9 +914,6 @@ public class GitSCM extends GitSCMBackwardCompatibility {
         Git git = Git.with(listener, environment).in(ws).using(gitExe);
 
         GitClient c = git.getClient();
-        for (GitSCMExtension ext : extensions) {
-            c = ext.decorate(this,c);
-        }
 
         for (UserRemoteConfig uc : getUserRemoteConfigs()) {
             String ucCredentialsId = uc.getCredentialsId();
@@ -938,6 +936,10 @@ public class GitSCM extends GitSCMBackwardCompatibility {
             }
         }
         // TODO add default credentials
+
+        for (GitSCMExtension ext : extensions) {
+            c = ext.decorate(this,c);
+        }
 
         return c;
     }
@@ -993,7 +995,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
     private void fetchFrom(GitClient git,
             @CheckForNull Run<?, ?> run,
             TaskListener listener,
-            RemoteConfig remoteRepository) throws InterruptedException, IOException {
+            RemoteConfig remoteRepository) throws GitException, InterruptedException, IOException {
 
         boolean first = true;
         for (URIish url : remoteRepository.getURIs()) {
@@ -1016,7 +1018,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
         }
     }
 
-    private RemoteConfig newRemoteConfig(String name, String refUrl, RefSpec... refSpec) {
+    private RemoteConfig newRemoteConfig(String name, String refUrl, RefSpec... refSpec) throws GitException {
 
         try {
             Config repoConfig = new Config();
@@ -1132,7 +1134,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
                                               final @NonNull BuildData buildData,
                                               final EnvVars environment,
                                               final @NonNull GitClient git,
-                                              final @NonNull TaskListener listener) throws IOException, InterruptedException {
+                                              final @NonNull TaskListener listener) throws GitException, IOException, InterruptedException {
         PrintStream log = listener.getLogger();
         Collection<Revision> candidates = Collections.emptyList();
         final BuildChooserContext context = new BuildChooserContextImpl(build.getParent(), build, environment);
@@ -1180,7 +1182,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
         buildData.saveBuild(revToBuild);
 
         if (buildData.getBuildsByBranchName().size() >= 100) {
-            log.println("JENKINS-19022: warning: possible memory leak due to Git plugin usage; see: https://plugins.jenkins.io/git/#remove-git-plugin-buildsbybranch-builddata-script");
+            log.println("JENKINS-19022: warning: possible memory leak due to Git plugin usage; see: https://plugins.jenkins.io/git/#plugin-content-remove-git-plugin-buildsbybranch-builddata-script");
         }
         boolean checkForMultipleRevisions = true;
         BuildSingleRevisionOnly ext = extensions.get(BuildSingleRevisionOnly.class);
@@ -1192,8 +1194,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
             log.println("Multiple candidate revisions");
             if (checkForMultipleRevisions) {
                 Job<?, ?> job = build.getParent();
-                if (job instanceof AbstractProject) {
-                    AbstractProject project = (AbstractProject) job;
+                if (job instanceof AbstractProject<?,?> project) {
                     if (!project.isDisabled()) {
                         log.println("Scheduling another build to catch up with " + project.getFullDisplayName());
                         if (!project.scheduleBuild(0, new SCMTrigger.SCMTriggerCause("This build was triggered by build "
@@ -1212,7 +1213,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
      *
      * By the end of this method, remote refs are updated to include all the commits found in the remote servers.
      */
-    private void retrieveChanges(Run build, GitClient git, TaskListener listener) throws IOException, InterruptedException {
+    private void retrieveChanges(Run build, GitClient git, TaskListener listener) throws GitException, IOException, InterruptedException {
         final PrintStream log = listener.getLogger();
 
         boolean removeSecondFetch = false;
@@ -1290,7 +1291,14 @@ public class GitSCM extends GitSCMBackwardCompatibility {
     @Override
     public void checkout(Run<?, ?> build, Launcher launcher, FilePath workspace, TaskListener listener, File changelogFile, SCMRevisionState baseline)
             throws IOException, InterruptedException {
+        try {
+            _checkout(build, launcher, workspace, listener, changelogFile, baseline);
+        } catch (GitException x) {
+            throw new IOException(x);
+        }
+    }
 
+    private void _checkout(Run<?, ?> build, Launcher launcher, FilePath workspace, TaskListener listener, File changelogFile, SCMRevisionState baseline) throws GitException, IOException, InterruptedException {
         if (!ALLOW_LOCAL_CHECKOUT && !workspace.isRemote()) {
             abortIfSourceIsLocal();
         }
@@ -1376,7 +1384,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
         // Needs to be after the checkout so that revToBuild is in the workspace
         try {
             printCommitMessageToLog(listener, git, revToBuild);
-        } catch (IOException | ArithmeticException | GitException ge) {
+        } catch (IOException | ArithmeticException ge) {
             // JENKINS-45729 reports a git exception when revToBuild cannot be found in the workspace.
             // JENKINS-46628 reports a git exception when revToBuild cannot be found in the workspace.
             // JENKINS-62710 reports a JGit arithmetic exception on an older Java 8 system.
@@ -1426,14 +1434,14 @@ public class GitSCM extends GitSCMBackwardCompatibility {
         }
         try {
             // Check for local remotes with no protocol like /path/to/repo.git/
-            return !Files.exists(Paths.get(remoteUrl));
+            return !Files.exists(Path.of(remoteUrl));
         } catch (InvalidPathException e) {
             return true;
         }
     }
 
     private void printCommitMessageToLog(TaskListener listener, GitClient git, final Build revToBuild)
-            throws IOException {
+            throws GitException, IOException {
         try {
             RevCommit commit = git.withRepository(new RevCommitRepositoryCallback(revToBuild));
             listener.getLogger().println("Commit message: \"" + commit.getShortMessage() + "\"");
@@ -1486,7 +1494,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
      *      Information that captures what we did during the last build. We need this for changelog,
      *      or else we won't know where to stop.
      */
-    private void computeChangeLog(GitClient git, Revision revToBuild, TaskListener listener, BuildData previousBuildData, FilePath changelogFile, BuildChooserContext context) throws IOException, InterruptedException {
+    private void computeChangeLog(GitClient git, Revision revToBuild, TaskListener listener, BuildData previousBuildData, FilePath changelogFile, BuildChooserContext context) throws GitException, IOException, InterruptedException {
         boolean executed = false;
         ChangelogCommand changelog = git.changelog();
         changelog.includes(revToBuild.getSha1());
@@ -1508,9 +1516,14 @@ public class GitSCM extends GitSCMBackwardCompatibility {
             }
 
             if (!exclusion) {
-                // this is the first time we are building this branch, so there's no base line to compare against.
-                // if we force the changelog, it'll contain all the changes in the repo, which is not what we want.
-                listener.getLogger().println("First time build. Skipping changelog.");
+                FirstBuildChangelog firstBuildChangelog = getExtensions().get(FirstBuildChangelog.class);
+                if (firstBuildChangelog != null && firstBuildChangelog.isMakeChangelog()) {
+                    changelog.to(out).max(1).execute();
+                    executed = true;
+                    listener.getLogger().println("First time build. Latest changes added to changelog.");
+                } else {
+                    listener.getLogger().println("First time build. Skipping changelog.");
+                }
             } else {
                 changelog.to(out).max(MAX_CHANGELOG).execute();
                 executed = true;
@@ -1826,7 +1839,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
 
         public static List<RemoteConfig> createRepositoryConfigurations(String[] urls,
                 String[] repoNames,
-                String[] refs) throws IOException {
+                String[] refs) throws GitException, IOException {
 
             List<RemoteConfig> remoteRepositories;
             Config repoConfig = new Config();
@@ -1889,7 +1902,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
             return mergeOptions;
         }
 
-        public FormValidation doGitRemoteNameCheck(StaplerRequest req)
+        public FormValidation doGitRemoteNameCheck(StaplerRequest2 req)
                 throws IOException, ServletException {
             String mergeRemoteName = req.getParameter("value");
             boolean isMerge = req.getParameter("isMerge") != null;
@@ -1910,7 +1923,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
         }
 
         @Override
-        public boolean configure(StaplerRequest req, JSONObject formData) throws FormException {
+        public boolean configure(StaplerRequest2 req, JSONObject formData) throws FormException {
             req.bindJSON(this, formData);
             save();
             return true;
@@ -1942,6 +1955,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
 //        }
     }
 
+    @Serial
     private static final long serialVersionUID = 1L;
 
     @Whitelisted
@@ -2081,7 +2095,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
      * @throws IOException on input or output error
      * @throws InterruptedException when interrupted
      */
-    protected FilePath workingDirectory(Job<?,?> context, FilePath workspace, EnvVars environment, TaskListener listener) throws IOException, InterruptedException {
+    protected FilePath workingDirectory(Job<?,?> context, FilePath workspace, EnvVars environment, TaskListener listener) throws GitException, IOException, InterruptedException {
         // JENKINS-10880: workspace can be null
         if (workspace == null) {
             return null;
